--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shimmer: ^2.0.0
   provider: ^6.0.0
   flutter_svg: ^1.0.3
+  shared_preferences: ^2.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
