--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   provider: ^6.0.0
   flutter_svg: ^1.0.3
   shared_preferences: ^2.0.11
+  loading_overlay: ^0.3.0
+  rflutter_alert: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^14.3.0
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
