--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,10 +27,10 @@ android {
         applicationId = "com.tripify.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdk = 23
+        targetSdk = 28
+        versionCode = 1
+        versionName = "1.0"
     }
 
     buildTypes {
