--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   loading_overlay: ^0.3.0
   rflutter_alert: ^2.0.7
   cloud_firestore: 5.4.4
+  firebase_storage: ^12.3.4
+  cached_network_image: ^3.2.3-rc
+  intl: ^0.18.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
