--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_auth: ^5.3.1
   carousel_slider: ^5.0.0
   flutter_form_builder: ^9.2.1
+  file_picker: ^8.1.3
 
 dev_dependencies:
   flutter_test:
