--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   cloud_firestore: 5.4.4
   firebase_storage: ^12.3.4
   cached_network_image: ^3.2.3-rc
-  intl: ^0.18.1
+  intl: ^0.19.0
   image_picker: ^1.1.2
   url_launcher: ^6.0.20
 
@@ -54,6 +54,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_form_builder: ^9.2.1
   file_picker: ^8.1.3
+  form_builder_validators: ^11.0.0
 
 dev_dependencies:
   flutter_test:
