--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.0.20
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -55,6 +56,12 @@ dependencies:
   flutter_form_builder: ^9.2.1
   file_picker: ^8.1.3
   form_builder_validators: ^11.0.0
+  google_maps_flutter: ^2.9.0
+  google_places_flutter: ^2.0.9
+  # google_maps_flutter: ^2.9.0 # optional, if you need map integration
+  # flutter_google_places: ^0.3.0 # Google Places autocomplete widget
+  # flutter_dotenv: ^5.0.2
+
 
 dev_dependencies:
   flutter_test:
