--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.2
   url_launcher: ^6.0.20
+  photo_manager: ^3.6.2
 
 
   # The following adds the Cupertino Icons font to your application.
