--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.0.20
   photo_manager: ^3.6.2
+  permission_handler: ^11.3.1
+  video_player: ^2.9.2 
+  flutter_video_info: ^1.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
