--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^11.3.1
   video_player: ^2.9.2 
   flutter_video_info: ^1.3.2
+  hive_flutter: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
