--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   photo_manager: ^3.6.2
   permission_handler: ^11.3.1
   video_player: ^2.9.2 
+  chewie: ^1.8.5
   flutter_video_info: ^1.3.2
   hive_flutter: ^1.1.0
+  image_cropper: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
