--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   flutter_video_info: ^1.3.2
   hive_flutter: ^1.1.0
   image_cropper: ^8.0.2
+  get_thumbnail_video: ^0.7.3
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
