--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   get_thumbnail_video: ^0.7.3
   geolocator: ^13.0.2
   geocoding: ^3.0.0
-
+  flutter_vlc_player: ^7.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
