--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   carousel_slider: ^5.0.0
-  flutter_form_builder: ^9.2.1
+  flutter_form_builder: ^9.5.0
   file_picker: ^8.1.3
   form_builder_validators: ^11.0.0
   google_maps_flutter: ^2.9.0
@@ -68,6 +68,9 @@ dependencies:
   open_filex: ^4.5.0
   video_player: ^2.9.2
   syncfusion_flutter_pdfviewer: ^27.2.2
+  fl_chart: ^0.69.2
+  flutter_stripe: ^11.3.0
+  dio: ^5.7.0
   # syncfusion_flutter_pdfviewer: ^20.4.54
  
 
