--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   geolocator: ^13.0.2
   geocoding: ^3.0.0
   flutter_vlc_player: ^7.4.2
+  pdf: ^3.11.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
