--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   geocoding: ^3.0.0
   flutter_vlc_player: ^7.4.2
   pdf: ^3.11.1
+  flutter_reorderable_list: ^1.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
