--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   fl_chart: ^0.69.2
   flutter_stripe: ^11.3.0
   dio: ^5.7.0
+  translator: ^1.0.3+1
   # syncfusion_flutter_pdfviewer: ^20.4.54
  
 
