--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   chewie: ^1.8.5
   flutter_video_info: ^1.3.2
   hive_flutter: ^1.1.0
+  connectivity_plus: ^6.1.1
   image_cropper: ^8.0.2
   get_thumbnail_video: ^0.7.3
   geolocator: ^13.0.2
@@ -97,6 +98,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  hive_generator: 2.0.1
+  analyzer: ^4.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
